Rework Game flow and AIs